# hpc_assignment

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exercise_1/: Life.cpp  Life.h  Makefile  README.md  consts.h  game.cpp  mpiscal.sh  mpiscal_nth1.sh  mpiscal_nth64.sh  mpiweak.sh  ompscal.sh  ordered.sh  static.sh  utils.cpp  utils.h
exercise_1/data/: data.csv  mpi_strong_nth1_s25.csv  mpi_strong_nth1_sL.csv  mpi_strong_nth64_s25.csv  mpi_strong_nth64_sL.csv  mpiweak_s25.csv  mpiweak_sL.csv  openmp.csv
exercise_1/src/: Life.cpp  consts.h  game.cpp  utils.cpp  utils.h
exercise_1/src/app/: game.cpp  graph.py  life.py  serial_game.cpp  story.py
exercise_1/src/include/: Life.h  SerialLife.h  consts.h  utils.h
exercise_1/src/lib/: Life.cpp  SerialLife.cpp  utils.cpp
exercise_2/: Makefile  README.md  cores.sh  gemm.c  gemm.cpp  sizes.sh  strong.sh  weak.sh
exercise_2/analysis/: strong.py  weak.py
exercise_2/data/core_scaling/: mkl_cc_double.csv  mkl_cc_single.csv  mkl_cs_double.csv  mkl_cs_single.csv  mkl_sc _double.csv  mkl_sc_single.csv  mkl_ss_double.csv  mkl_ss_single.csv  mkl_tc_double.csv  mkl_tc_single.csv  mkl_ts_double.csv  mkl_ts_single.csv  oblas_cc_double.csv  oblas_cc_single.csv  oblas_cs_double.csv  oblas_cs_single.csv  oblas_sc_double.csv  oblas_sc_single.csv  oblas_ss_double.csv  oblas_ss_single.csv  oblas_tc_double.csv  oblas_tc_single.csv  oblas_ts_double.csv  oblas_ts_single.csv
exercise_2/data/size_scaling/: mkl_cc_double.csv  mkl_cc_single.csv  mkl_cs_double.csv  mkl_cs_single.csv  mkl_sc_double.csv  mkl_sc_single.csv  mkl_ss_double.csv  (+17 more)
